# src/main/java/com/mayoo/Controller/UserController.java
@@ -2,33 +2,38 @@ package com.mayoo.Controller;
 
 import com.mayoo.Exceptions.CustomException;
 import com.mayoo.Service.IUserService;
-import com.mayoo.openapi.api.UserApi;
-import com.mayoo.openapi.model.CreateUser;
+import com.mayoo.openapi.api.AuthApi;
+import com.mayoo.openapi.model.AuthenticationRequest;
+import com.mayoo.openapi.model.AuthenticationResponse;
+import com.mayoo.openapi.model.RegisterRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-public class UserController implements UserApi {
+public class UserController implements com.mayoo.openapi.api.AuthApi {
     private final IUserService userService;
     
     @Autowired
     public UserController(IUserService userService) {
         this.userService = userService;
-    }   
+    }
 
     @Override
-    public ResponseEntity<Void> userIdRightCreatePost(String idRight, CreateUser createUser) {
+    public ResponseEntity<Void> authUserIdRightCreatePost(String idRight, RegisterRequest registerRequest) {
         ResponseEntity responseEntity;
         try {
-            userService.createUser(createUser);
+            userService.createUser(registerRequest);
             responseEntity = new ResponseEntity(HttpStatus.CREATED);
-        }
-        catch (CustomException exception) {
+        } catch (CustomException exception) {
             responseEntity = new ResponseEntity(HttpStatus.FORBIDDEN);
         }
-        
         return responseEntity;
+    }
+
+    @Override
+    public ResponseEntity<AuthenticationResponse> authUserPost(AuthenticationRequest authenticationRequest) {
+        return AuthApi.super.authUserPost(authenticationRequest);
     }
 }
